--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   get_it: ^7.2.0
   injectable: ^1.5.3
   json_annotation: ^4.6.0
+  time_elapsed: ^0.2.6
 
 dev_dependencies:
   build_runner: ^2.2.0
