--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   injectable: ^1.5.3
   json_annotation: ^4.6.0
   time_elapsed: ^0.2.6
+  url_launcher: ^6.1.5
 
 dev_dependencies:
   build_runner: ^2.2.0
