--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
     sdk: flutter
   flutter_markdown: ^0.6.12
   flutter_riverpod: ^1.0.4
+  freezed: ^2.0.0
+  freezed_annotation: ^2.1.0
   get_it: ^7.2.0
   injectable: ^1.5.3
   json_annotation: ^4.6.0
